v1.11.x/connectors/database/exasol/yaml.mdx
---
title: Run the Exasol Connector Externally
description: Use YAML to ingest metadata from Exasol databases including tables, indexes, and analytical structures.
sidebarTitle: Run Externally
mode: "wide"
---
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import { CodePreview, ContentPanel, ContentSection, CodePanel } from '/snippets/components/CodePreview.jsx'
import IngestionCli from '/snippets/connectors/yaml/ingestion-cli.mdx'
import PythonRequirements from '/snippets/connectors/python-requirements.mdx'
import ExternalIngestionDeployment from '/snippets/v1.11.x/connectors/external-ingestion-deployment.mdx'
import IngestionSink from '/snippets/connectors/yaml/ingestion-sink.mdx'
import WorkflowConfig from '/snippets/connectors/yaml/workflow-config.mdx'
import SourceConfig from '/snippets/connectors/yaml/database/source-config.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/exasol.webp'
name="Exasol"
stage="PROD"
availableFeatures={["Metadata", "Lineage", "Column-level Lineage"]}
unavailableFeatures={["Query Usage", "Data Profiler", "Data Quality", "Owners", "dbt", "Tags", "Stored Procedures", "Sample Data", "Auto-Classification"]} />
In this section, we provide guides and references to use the Exasol connector.
Configure and schedule Exasol metadata and profiler workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
- [Lineage](/connectors/ingestion/lineage)
<ExternalIngestionDeployment />
## Requirements
### Python Requirements
<PythonRequirements />
To run the Exasol ingestion, you will need to install:
```bash
pip3 install "openmetadata-ingestion[Exasol]"
```

### Database Privilege Requirements
To ingest basic metadata, an Exasol user must have the following privileges:
  - `USAGE` privilege on Schema
  - `SELECT` privilege on Tables

OpenMetadata fetches the query logs for the lineage workflow by querying `EXA_DBA_AUDIT_SQL`
and joining `EXA_DBA_AUDIT_SESSIONS`. To access these system tables, an Exasol user
must have the `SELECT ANY DICTIONARY` system privilege, which is typically reserved
for database administrators. For further details, refer to the
[Statistical system tables page](https://docs.exasol.com/db/latest/sql_references/system_tables/statistical_system_tables.htm).

## Metadata Ingestion
### 1. Define the YAML Config

<CodePreview>

<ContentPanel>

<ContentSection id={1} title="Source Configuration" lines="1-3">

Configure the source type and service name for your Exasol connector.

</ContentSection>

<ContentSection id={2} title="Username" lines="7">

**username**: The username required to authenticate and connect to the Exasol database. The user must have sufficient privileges to access and read all the metadata available in Exasol.

</ContentSection>

<ContentSection id={3} title="Password" lines="8">

**password**: The password associated with the user account used to connect to the Exasol database. Ensure this password corresponds to the specified username and is stored securely. Avoid sharing passwords in plain text and use secure methods for managing sensitive credentials.

</ContentSection>

<ContentSection id={4} title="Host Port" lines="9">

**hostPort**: Provide the fully qualified hostname and port number of your Exasol deployment in the "Host and Port" field.

</ContentSection>

<ContentSection id={5} title="SSL/TLS Settings" lines="10">

**SSL/TLS Settings**: Mode/setting for SSL validation:

- **validate-certificate**: Uses Transport Layer Security (TLS) and validates the server certificate using system certificate stores.
- **ignore-certificate**: Uses Transport Layer Security (TLS) but disables the validation of the server certificate. This should not be used in production. It can be useful during testing with self-signed certificates.
- **disable-tls**: Does not use any Transport Layer Security (TLS). Data will be sent in plain text (no encryption). While this may be helpful in rare cases of debugging, make sure you do not use this in production.

</ContentSection>

<ContentSection id={6} title="Connection Options" lines="11">

**Connection Options (Optional)**: Enter the details for any additional connection options that can be sent to database during the connection. These details must be added as Key-Value pairs.

</ContentSection>

<ContentSection id={7} title="Connection Arguments" lines="12">

**Connection Arguments (Optional)**: Enter the details for any additional connection arguments such as security or protocol configs that can be sent to database during the connection. These details must be added as Key-Value pairs.

</ContentSection>


<ContentSection id={8} title="Source Config" lines="15-58">

<SourceConfigDef />

</ContentSection>

</ContentPanel>

<CodePanel fileName="exasol_config.yaml">

```yaml
source:
  type: exasol
  serviceName: "<service name>"
  serviceConnection:
    config:
      type: Exasol
      username: Exasol  # REQUIRED
      password: password  # REQUIRED
      hostPort: 127.0.0.1:8563  # REQUIRED - format: host:port
      SSL/TLS Settings: validate-certificate (default), or ignore-certificate, or disable-tls
      # connectionOptions:
      #   key: value
      # connectionArguments:
      #   key: value
```

<SourceConfig />

<IngestionSink />

<WorkflowConfig />

</CodePanel>

</CodePreview>

<IngestionCli />
